--- a/LanguageSchool/LanguageSchool.csproj
+++ b/LanguageSchool/LanguageSchool.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Components\Navigation.cs" />
     <Compile Include="TestWind.xaml.cs">
       <DependentUpon>TestWind.xaml</DependentUpon>
     </Compile>
@@ -186,7 +187,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Resource Include="Pages\Sourse\school_logo.png" />
+    <Resource Include="Sourse\school_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Components\Model1.Context.tt">
